--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://warcreed.github.io/Karnaugh-Map-Solver",
+  "homepage": "https://AnandSidd.github.io/Karnaugh-Map-Solver",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
