--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "homepage": "https://AnandSidd.github.io/Karnaugh-Map-Solver",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/AnandSidd/Karnaugh-Map-webapp"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
